css/style.css
html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {
  font-size: 100%;
  font-weight: inherit;
  font-style: inherit;
  font-family: inherit;
  vertical-align: baseline;
  margin: 0;
  padding: 0;
  border: 0;
  outline: 0;
}

html {
  height: 100%;
}

*:focus {
  outline: 0;
  box-sizing: border-box;
}

body {
  background: #ffffff;
  background: -moz-linear-gradient(top, #ffffff 0%, #e5e5e5 60%, #eaeaea 85%, #ffffff 100%);
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(60%,#e5e5e5), color-stop(85%,#eaeaea), color-stop(100%,#ffffff));
  background: -webkit-linear-gradient(top, #ffffff 0%,#e5e5e5 60%,#eaeaea 85%,#ffffff 100%);
  background: -o-linear-gradient(top, #ffffff 0%,#e5e5e5 60%,#eaeaea 85%,#ffffff 100%);
  background: -ms-linear-gradient(top, #ffffff 0%,#e5e5e5 60%,#eaeaea 85%,#ffffff 100%);
  background: linear-gradient(to bottom, #ffffff 0%,#e5e5e5 60%,#eaeaea 85%,#ffffff 100%);
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff',GradientType=0 );
  color: black;
  font: normal 1.0em Helvetica, sans-serif;
}

a:link, a:visited {
  color: #1B69A2;
  text-decoration: none;
}

a:hover {
  color: #1C67A3;
  text-decoration: underline;
}

a:active {
  position: relative;
  top: 1px;
}

strong {
  font-weight: bold;
}

hr {
  border: 0;
  border-top: 1px solid #cccccc;
  margin: 1em 0 1em 0;
}

ul {
  list-style-type: square;
  padding-left: 1em;
}

.content {
  width: 880px;
  margin: 2.5% auto 2.5% auto;
}

.header a:link, .header a:visited, .header a:hover, .footer a:link, .footer a:visited, .footer a:hover {
  font-weight: bold;
}

.header {
  text-align: justify;
}

.header .title {
  font-size: 2em;
  font-weight: bold;
}

.box .title {
  font-size: 1.3em;
  font-weight: bold;
}

.title img{
  margin: 10px 15px -10px 15px;
  width: 48px;
  height: 48px;
}

.title a:link, .title a:visited, .title a:hover {
  color: #000000;
  text-decoration: none;
}

.box {
  background-color: #ffffff;
  border: 1px solid #cccccc;
  padding: 1em;
  margin: 1em 0 1em 0;
  -webkit-box-shadow: 0px 3px 15px 0px rgba(15, 15, 15, 0.2);
  box-shadow: 0px 3px 15px 0px rgba(15, 15, 15, 0.2);
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
}

input[type="text"]:focus, input[type="password"]:focus {
  box-shadow: 0 0 5px #0d44d0;
  -webkit-box-shadow: 0 0 5px #0d44d0;
  -moz-box-shadow: 0 0 5px #0d44d0;
  border:1px solid #0d44d0;
}

input[type='submit']:hover {
  cursor: pointer;
}

.footer {
  clear: both;
  margin-top: 1em;
  padding-bottom: 2em;
}

.footer span {
  float: right;
}

.footer a:last-child {
  font-weight: normal;
}
.baf-group a{
  color: #000000;
}

#podcasts{
  text-align: center;
}

.tbox {position:absolute; display:none; padding:14px 17px; z-index:900; height: 90%; overflow-y: scroll;}
.tinner {padding:15px; -moz-border-radius:5px; border-radius:5px; background:#fff url(./../img/preload.gif) no-repeat 50% 50%; border-right:1px solid #333; border-bottom:1px solid #333}
.tmask {position:absolute; display:none; top:0px; left:0px; height:100%; width:100%; background:#000; z-index:800}
.tclose {position:absolute; top:0px; right:0px; width:30px; height:30px; cursor:pointer; background:url(./../img/close.png) no-repeat}
.tclose:hover {background-position:0 -30px}

.itemlist{
  height: 160px;
  overflow-y: scroll;
}

.itemlist li {
  width: 265px;
  display: inline-block;
  vertical-align: top;
  margin: 4px;
  list-style: none;
  margin-top: 25px;
  overflow: hidden;
}

.itemlist .itemtype{
  height: 16px;
  width: 16px;
}

.itemlist a {
  font-size: smaller;
}

.info_icon{
  font: caption; 
  width: 50px; 
  height: 70px; 
  margin: 0em 1em 0em 2em;
}

iframe{
  height: 1px;
  width: 1px;
  visibility: hidden;
}
.baf{
  min-width: 70px;
  margin-top: 10px;
}
.dropdown-menu{
  right: 0;
  left: auto;
  min-width: 55px;
  max-width: 200px;
}
.dropdown-menu li a{
  padding: 5px 20px 5px 20px;
}

